removed: base_url

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
 h1, h2, h3 .bold {
   font-family: 'Poppins',sans-serif;
 }
+::-webkit-scrollbar {
+  display: none; 
+}
 
 .specialBtn {
   background: white;
